Fix "Working days views won't follow the configured work days" Patch provided by Dmitry Kagan. Thanks!

BUG: 128435

svn path=/branches/KDE/3.5/kdepim/; revision=654061